updated js and added code to css

--- a/COUBER437_WFC2401_GroupB_CourtneyBergstedt_JSL09/index.css
+++ b/COUBER437_WFC2401_GroupB_CourtneyBergstedt_JSL09/index.css
@@ -49,3 +49,8 @@ div#crypto-top {
 div#crypto-top > span {
     margin-left: 10px;
 }
+
+div#weather {
+    display: flex;
+    align-items: flex-start;
+}
