--- a/COUBER437_WFC2401_GroupB_CourtneyBergstedt_JSL09/index.css
+++ b/COUBER437_WFC2401_GroupB_CourtneyBergstedt_JSL09/index.css
@@ -53,4 +53,9 @@ div#crypto-top > span {
 div#weather {
     display: flex;
     align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+div#weather > img {
+    width: 70px;
 }
