updated js and css

--- a/COUBER437_WFC2401_GroupB_CourtneyBergstedt_JSL09/index.css
+++ b/COUBER437_WFC2401_GroupB_CourtneyBergstedt_JSL09/index.css
@@ -54,8 +54,16 @@ div#weather {
     display: flex;
     align-items: flex-start;
     flex-wrap: wrap;
+    justify-content: flex-end;
+    align-self: flex-start;
 }
 
 div#weather > img {
     width: 70px;
+}
+
+p.weather-city {
+    width: 100%;
+    text-align: right;
+    margin: 0;
 }
