--- a/COUBER437_WFC2401_GroupB_CourtneyBergstedt_JSL09/index.css
+++ b/COUBER437_WFC2401_GroupB_CourtneyBergstedt_JSL09/index.css
@@ -52,8 +52,8 @@ div#crypto-top > span {
 
 div#weather {
     display: flex;
-    align-items: flex-start;
-    flex-wrap: wrap;
+    align-items: center;
+    flex-wrap: wrap; 
     justify-content: flex-end;
     align-self: flex-start;
 }
@@ -66,4 +66,11 @@ p.weather-city {
     width: 100%;
     text-align: right;
     margin: 0;
+    margin-top: -15px;
+}
+
+p.weather-temp {
+    margin: 0;
+    font-size: 1.7rem;
+    margin-left: -10px;
 }
